log
Thu 14 Sep 2023 03:00:39 AM UTC: 
 tests:  1|8
total_score: 0/70
29afcfb
Thu 14 Sep 2023 03:02:39 AM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
9695c0c
Thu 14 Sep 2023 03:04:59 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:23: error: ‘curren’ undeclared (first use in this function); did you mean ‘current’?
   91 |             current = curren->left;
      |                       ^~~~~~
      |                       current
treemap.c:91:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
892c674
Thu 14 Sep 2023 03:05:07 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
39d43e3
Thu 14 Sep 2023 03:06:11 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|7
total_score: 5/70
32c516c
Thu 14 Sep 2023 03:08:32 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
6d70ada
